--- a/main.html
+++ b/main.html
@@ -8,7 +8,9 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+	<img class="moviePic" src="https://www.seroundtable.com/google-image-links-seo-24732.html">
+    <p class="movieDetail">bzhcjgcgfnzkchz</p>
+	<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
